# adb_pair

./: Cargo.toml  README.org
src/: main.rs
