[package]
name = "adb_pair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12"
mdns = "3.0.0"
rand = "0.8.5"
log = "0.4"
async-stream = "0.2.0"
async-std = { version = "1.6.2", features = ["unstable", "attributes"] }
futures-core = "0.3.1"
futures-util = "0.3.1"